feat - get all arts

--- a/front-end/artvaul-workspace/tsconfig.json
+++ b/front-end/artvaul-workspace/tsconfig.json
@@ -5,6 +5,9 @@
     "paths": {
       "art-features": [
         "./dist/art-features"
+      ],
+      "tools": [
+        "./dist/tools"
       ]
     },
     "outDir": "./dist/out-tsc",
