feat - introduction signal with search lib

--- a/front-end/artvaul-workspace/package.json
+++ b/front-end/artvaul-workspace/package.json
@@ -5,11 +5,12 @@
     "ng": "ng",
     "prestart": "npm run build:libs",
     "start": "ng serve",
-    "build:libs:tools:run":"npm run build:libs:tools",
     "build:libs:tools": "ng build tools",
+    "build:libs:search": "ng build search",
     "build:libs:art": "ng build art-features",
-    "build:libs": "npm run build:libs:art",
+    "build:libs": "npm run build:libs:tools && npm run build:libs:search && npm run build:libs:art",
     "build:app": "ng build front-end",
+    "watch:libs:search": "ng build search --watch --configuration development",
     "watch:libs:tools": "ng build tools --watch --configuration development",
     "watch:libs:art": "ng build art-features --watch --configuration development",
     "watch:app": "ng build front-end --watch --configuration development",
