--- a/front-end/artvaul-workspace/tsconfig.json
+++ b/front-end/artvaul-workspace/tsconfig.json
@@ -6,6 +6,9 @@
       "art-features": [
         "./dist/art-features"
       ],
+      "search": [
+        "./dist/search"
+      ],
       "tools": [
         "./dist/tools"
       ]
